[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-django"
dynamic = ["version"]
description = "OpenTelemetry Instrumentation for Django"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "opentelemetry-api ~= 1.12",
  "opentelemetry-instrumentation == 0.34b0",
  "opentelemetry-instrumentation-wsgi == 0.34b0",
  "opentelemetry-semantic-conventions == 0.34b0",
  "opentelemetry-util-http == 0.34b0",
]

[project.optional-dependencies]
asgi = [
  "opentelemetry-instrumentation-asgi == 0.34b0",
]
instruments = [
  "django >= 1.10",
]
test = [
  "opentelemetry-instrumentation-django[instruments]",
  "opentelemetry-test-utils == 0.34b0",
]

[project.entry-points.opentelemetry_instrumentor]
django = "opentelemetry.instrumentation.django:DjangoInstrumentor"

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python-contrib/tree/main/instrumentation/opentelemetry-instrumentation-django"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/django/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
