[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-falcon"
dynamic = ["version"]
description = "Falcon instrumentation for OpenTelemetry"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "opentelemetry-api ~= 1.12",
  "opentelemetry-instrumentation == 0.35b0",
  "opentelemetry-instrumentation-wsgi == 0.35b0",
  "opentelemetry-semantic-conventions == 0.35b0",
  "opentelemetry-util-http == 0.35b0",
  "packaging >= 20.0",
]

[project.optional-dependencies]
instruments = [
  "falcon >= 1.4.1, < 4.0.0",
]
test = [
  "opentelemetry-instrumentation-falcon[instruments]",
  "opentelemetry-test-utils == 0.35b0",
  "parameterized == 0.7.4",
]

[project.entry-points.opentelemetry_instrumentor]
falcon = "opentelemetry.instrumentation.falcon:FalconInstrumentor"

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python-contrib/tree/main/instrumentation/opentelemetry-instrumentation-falcon"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/falcon/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
