[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-fastapi"
dynamic = ["version"]
description = "OpenTelemetry FastAPI Instrumentation"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "opentelemetry-api ~= 1.12",
  "opentelemetry-instrumentation == 0.35b0.dev",
  "opentelemetry-instrumentation-asgi == 0.35b0.dev",
  "opentelemetry-semantic-conventions == 0.35b0.dev",
  "opentelemetry-util-http == 0.35b0.dev",
]

[project.optional-dependencies]
instruments = [
  "fastapi ~= 0.58",
]
test = [
  "opentelemetry-instrumentation-fastapi[instruments]",
  "opentelemetry-test-utils == 0.35b0.dev",
  "requests ~= 2.23.0", # needed for testclient
]

[project.entry-points.opentelemetry_instrumentor]
fastapi = "opentelemetry.instrumentation.fastapi:FastAPIInstrumentor"

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python-contrib/tree/main/instrumentation/opentelemetry-instrumentation-fastapi"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/fastapi/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
