# Copyright The OpenTelemetry Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = opentelemetry-instrumentation-grpc
description = OpenTelemetry gRPC instrumentation
long_description = file: README.rst
long_description_content_type = text/x-rst
author = OpenTelemetry Authors
author_email = cncf-opentelemetry-contributors@lists.cncf.io
url = https://github.com/open-telemetry/opentelemetry-python-contrib/tree/main/instrumentation/opentelemetry-instrumentation-grpc
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find_namespace:
install_requires =
    opentelemetry-api ~= 1.3
    opentelemetry-sdk ~= 1.3
    opentelemetry-semantic-conventions == 0.31b0
    opentelemetry-instrumentation == 0.31b0
    wrapt >= 1.0.0, < 2.0.0

[options.extras_require]
test =
    opentelemetry-test-utils == 0.31b0
    opentelemetry-sdk ~= 1.3
    protobuf ~= 3.13

[options.packages.find]
where = src

[options.entry_points]
opentelemetry_instrumentor =
    grpc_client = opentelemetry.instrumentation.grpc:GrpcInstrumentorClient
    grpc_server = opentelemetry.instrumentation.grpc:GrpcInstrumentorServer
