[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-instrumentation-kafka-python"
dynamic = ["version"]
description = "OpenTelemetry Kafka-Python instrumentation"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "opentelemetry-api ~= 1.5",
  "opentelemetry-instrumentation == 0.36b0.dev",
  "opentelemetry-semantic-conventions == 0.36b0.dev",
]

[project.optional-dependencies]
instruments = [
  "kafka-python >= 2.0",
]
test = [
  "opentelemetry-instrumentation-kafka-python[instruments]",
  "opentelemetry-test-utils == 0.36b0.dev",
  "wrapt >= 1.0.0, < 2.0.0",
]

[project.entry-points.opentelemetry_instrumentor]
kafka = "opentelemetry.instrumentation.kafka:KafkaInstrumentor"

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python-contrib/tree/main/instrumentation/opentelemetry-instrumentation-kafka-python"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/kafka/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
